# MCP-Servers-with-Tools

./: .gitignore  README.md  main.py  pyproject.toml
graphqlserver/: client.py  graphql.json  graphql_example.py
server/: client.py  weather.json  weather.py
